added new codes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,10 @@ spring.datasource.password=rootroot
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+spring.jpa.properties.jakarta.persistence.sharedCache.mode=NONE
+
+spring.jpa.open-in-view=false
 
 spring.mvc.pathmatch.matching-strategy=ant-path-matcher
